samples/_failures_safe/1761529407_5d96e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6bcf3971.c: In function ‘determine_event’:
./samples/SAFE/__tmp_6bcf3971.c:183:5: error: expected declaration or statement at end of input
  183 |     } else if (strcmp(input, "reset") == 0) {
      |     ^
./samples/SAFE/__tmp_6bcf3971.c:183:5: error: expected declaration or statement at end of input
